# motivated-eval

./: .env.example  .gitattributes  .gitignore  README.md  analyze_lab_bias.py  analyze_motivated_reasoning.py  generate_triplets.py  lab_bias.py  main.py  motivated_interpretation.py  pyproject.toml  run_lab_bias.py  test_bias_score.py
data/: all-cause-mortality-intervention-outcome.csv  all-cause-mortality.jinja  datacenter.jinja  evidence_combos.csv  sensitive_example.json  test.txt
transcripts/: claude-3.5-haiku.eval  gemini-2.5-flash.eval  gpt-4.1-mini-biased.eval  gpt-4.1-mini.eval  grok-3-mini.eval
