[project]
name = "motivated-eval"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.60.0",
    "inspect-ai>=0.3.117",
    "jinja2>=3.0.0",
    "numpy>=2.0.0",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pytest>=8.0.0",
    "scipy>=1.14.0",
]
